--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -55,5 +55,15 @@
     </servlet-mapping>
 
 
+    <servlet>
+        <servlet-name>Serve_UpdateProfilePicture</servlet-name>
+        <servlet-class>User.Serve_UpdateProfilePicture</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Serve_UpdateProfilePicture</servlet-name>
+        <url-pattern>/Serve_UpdateProfilePicture</url-pattern>
+    </servlet-mapping>
+
+
 
 </web-app>
