article updates: show all article , show all user article, create new Article (DAO only).

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -75,4 +75,14 @@
     </servlet-mapping>
 
 
+    <servlet>
+        <servlet-name>Serve_fullArticlecontent</servlet-name>
+        <servlet-class>Article.Serve_fullArticlecontent</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Serve_fullArticlecontent</servlet-name>
+        <url-pattern>/Serve_fullArticlecontent</url-pattern>
+    </servlet-mapping>
+
+
 </web-app>
