--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -103,7 +103,7 @@
         <url-pattern>/Serve_TreeCreation</url-pattern>
     </servlet-mapping>
 
-    Serve_TreeURL
+
 
 
     <servlet>
@@ -115,6 +115,27 @@
         <url-pattern>/Serve_TreeURL</url-pattern>
     </servlet-mapping>
 
+
+
+    <servlet>
+        <servlet-name>Serve_TreeReaction</servlet-name>
+        <servlet-class>Tree.Serve_TreeReaction</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Serve_TreeReaction</servlet-name>
+        <url-pattern>/Serve_TreeReaction</url-pattern>
+    </servlet-mapping>
+
+
+
+    <servlet>
+        <servlet-name>Serve_DeleteTreeComponents</servlet-name>
+        <servlet-class>Tree.Serve_DeleteTreeComponents</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Serve_DeleteTreeComponents</servlet-name>
+        <url-pattern>/Serve_DeleteTreeComponents</url-pattern>
+    </servlet-mapping>
 
 
 </web-app>
