--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,6 +4,14 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
+    <servlet>
+        <servlet-name>GoogleVerification</servlet-name>
+        <servlet-class>User.Serve_Authentication</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>GoogleVerification</servlet-name>
+        <url-pattern>/tokensignin</url-pattern>
+    </servlet-mapping>
 
 
     <servlet>
@@ -94,14 +102,14 @@
     </servlet-mapping>
 
 
-    <servlet>
-        <servlet-name>Serve_TreeCreation</servlet-name>
-        <servlet-class>Tree.Serve_TreeCreation</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>Serve_TreeCreation</servlet-name>
-        <url-pattern>/Serve_TreeCreation</url-pattern>
-    </servlet-mapping>
+    <!--<servlet>-->
+        <!--<servlet-name>Serve_TreeCreation</servlet-name>-->
+        <!--<servlet-class>Tree.Serve_TreeCreation</servlet-class>-->
+    <!--</servlet>-->
+    <!--<servlet-mapping>-->
+        <!--<servlet-name>Serve_TreeCreation</servlet-name>-->
+        <!--<url-pattern>/Serve_TreeCreation</url-pattern>-->
+    <!--</servlet-mapping>-->
 
 
 
