update forest tribe debug

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -102,14 +102,14 @@
     </servlet-mapping>
 
 
-    <!--<servlet>-->
-        <!--<servlet-name>Serve_TreeCreation</servlet-name>-->
-        <!--<servlet-class>Tree.Serve_TreeCreation</servlet-class>-->
-    <!--</servlet>-->
-    <!--<servlet-mapping>-->
-        <!--<servlet-name>Serve_TreeCreation</servlet-name>-->
-        <!--<url-pattern>/Serve_TreeCreation</url-pattern>-->
-    <!--</servlet-mapping>-->
+    <servlet>
+        <servlet-name>Serve_TreeCreation</servlet-name>
+        <servlet-class>Tree.Serve_TreeCreation</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Serve_TreeCreation</servlet-name>
+        <url-pattern>/Serve_TreeCreation</url-pattern>
+    </servlet-mapping>
 
 
 
